# faster-utf8-validator-rs

./: Cargo.toml
benches/: criterion_bench.rs
